--- a/index.html
+++ b/index.html
@@ -1,62 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Fertility Demographics in D3</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>D3Times</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/d3Style.css">
-
-</head>
-
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-12">
+  <body>
+    <div class="container">
+      <div class="row">
         <div class="jumbotron">
-          <h1 class="display-4">D3Times</h1>
-          <p class="lead">Fertility and Demographics</p>
-          <hr class="my-4">
-          <p>We examined all women between the ages of 15-50 who have given birth within the past year to greater understand the demographics they inhabit across the United States.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12  col-md-9">
-        <div id="scatter">
-          <!-- We append our chart here. -->
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12  col-md-9">
-        <div class="article">
-          <h2>Correlations in Demographics of Pregnant Women</h2>
-          <p>By using the above graphics, we can examine if there is any correlation between given demographics of women between the ages of 15-50 who have given birth in the past year. The dataset used is based on 2017 ACS 5-year estimates from the U.S. Census Bureau and the Behavioral Risk Factor Surveillance System: <a href="https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_17_5YR_S1301&prodType=table.">Search Results Dataset</a> The numbers reported are estimates of the % of distribution for each demographic.</p>
-          <hr>
-          <h2> Observations</h2>
-          <p>One observation is that there is a correlation between poverty and women without a high school degree within this population. Puerto Rico appears to be an outlier here in that there is a high level of poverty in this demographic, but an average level of women without a high school degree.</p>
-          <p>There also appears to be a correlation between being unmarried and being in poverty in this demographic. In this case, Puerto Rico has both the highest rate of unemployment and the highest rate of unmarried women in the United States, whereas Utah has the smallest rate of both. 
+          <h1>The Demographics of Motherhood</h1>
+          <hr class="my-4" />
+          <p>
+            Using data provided by the U.S. Census, I analyzed the data of all
+            women between the ages of 15-50 who have given birth within the past
+            year to greater understand the demographics they inhabit across the
+            United States.
           </p>
-          <p>Another observation is that there is a correlation between being a teenager and experiencing poverty within this demographic. Again, Puerto Rico has a very high percentage of both as compared to the rest of the United States.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div id="scatter"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="article">
+            <h2>Correlations in Demographics of Pregnant Women</h2>
+            <p>
+              By using the above graphics, we can examine if there is any
+              correlation between given demographics of women between the ages
+              of 15-50 who have given birth in the past year. The dataset used
+              is based on 2017 ACS 5-year estimates from the <strong>U.S. Census Bureau
+              and the Behavioral Risk Factor Surveillance System:
+              <a
+                href="https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_17_5YR_S1301&prodType=table."
+                >Search Results Dataset</a
+              ></strong>
+              The numbers reported are estimates of the % of distribution for
+              each demographic.
+            </p>
+            <hr />
+            <h2>Observations</h2>
+            <p>
+              One observation is that there is a correlation between poverty and
+              women without a high school degree within this population. Puerto
+              Rico appears to be an outlier here in that there is a high level
+              of poverty in this demographic, but an average level of women
+              without a high school degree.
+            </p>
+            <p>
+              There also appears to be a correlation between being unmarried and
+              being in poverty in this demographic. In this case, Puerto Rico
+              has both the highest rate of unemployment and the highest rate of
+              unmarried women in the United States, whereas Utah has the
+              smallest rate of both.
+            </p>
+            <p>
+              Another observation is that there is a correlation between being a
+              teenager and experiencing poverty within this demographic. Again,
+              Puerto Rico has a very high percentage of both as compared to the
+              rest of the United States.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-  <script type="text/javascript" src="assets/js/app.js"></script>
-
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
+  </body>
 </html>
